# sinc-llm

./: LICENSE  README.md  pyproject.toml
experiments/: README.md  analyze_data.py  run_ablation.py  run_battles.py
experiments/data/: nyquist_session.jsonl
sinc_llm/: __init__.py  cli.py  core.py  mcp_server.py  providers.py  scatter.py  server.py
