[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sinc-llm"
version = "0.1.0"
description = "Nyquist-Shannon sampling for LLM prompts. Decomposes raw prompts into 6 frequency bands, computes SNR, and reconstructs with formal quality guarantees."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mario Alexandre" },
]
keywords = [
    "llm",
    "prompt-engineering",
    "nyquist",
    "signal-processing",
    "sinc",
    "anthropic",
    "claude",
    "mcp",
    "prompt-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Zero dependencies for core (SNR, detect, build, parse)
dependencies = []

[project.optional-dependencies]
execute = ["anthropic>=0.39.0"]
dev = [
    "anthropic>=0.39.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/marioalexandre/sinc-llm"
Documentation = "https://github.com/marioalexandre/sinc-llm#readme"
Repository = "https://github.com/marioalexandre/sinc-llm"
Issues = "https://github.com/marioalexandre/sinc-llm/issues"
Donate = "https://tokencalc.pro/"
DOI = "https://doi.org/10.5281/zenodo.19152668"

[project.scripts]
sinc-scatter = "sinc_llm.cli:scatter_main"
sinc-engine = "sinc_llm.cli:engine_main"
sinc-server = "sinc_llm.server:main"
sinc-mcp = "sinc_llm.mcp_server:main"
sinc-llm = "sinc_llm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sinc_llm"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
